Bug fix
Fixed a bug where the latest release was cropped down from the bottom

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main{
     overflow-y: scroll;
     padding: 10px;
     padding-top: 60px;
+    margin-bottom: 100px;
     border-right: 2px solid white;
     width: 66%;
 }
